--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-bs4
-lxml
-clint
+args==0.1.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+clint==0.5.1
+idna==3.3
+lxml==4.9.0
+requests==2.27.1
+soupsieve==2.3.2.post1
+urllib3==1.26.9
